--- a/frontend/admin/loginadmin.html
+++ b/frontend/admin/loginadmin.html
@@ -80,6 +80,7 @@
 
           const res = await fetch("http://localhost:5000/api/loginadmin", {
             method: "POST",
+            credentials: "include",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({ email, password }),
           });
