kritik dan kalender admin

--- a/frontend/admin/pembayaran.html
+++ b/frontend/admin/pembayaran.html
@@ -88,6 +88,16 @@
                   >
                 </li>
                 <li>
+                  <a class="dropdown-item" href="kalender.html"
+                    >Kalender Pelatihan</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="kritiksaran.html"
+                    >Kritik dan Saran</a
+                  >
+                </li>
+                <li>
                   <a class="dropdown-item" href="gallery.html">Gallery</a>
                 </li>
               </ul>
@@ -128,9 +138,7 @@
               </a>
               <ul class="dropdown-menu dropdown-menu-dark">
                 <li>
-                  <a class="dropdown-item" href="logadmin.html"
-                    >Log Admin</a
-                  >
+                  <a class="dropdown-item" href="logadmin.html">Log Admin</a>
                 </li>
               </ul>
             </li>
