--- a/frontend/index.html
+++ b/frontend/index.html
@@ -248,7 +248,7 @@
                     <!-- CTA -->
                     <div class="cta-wrapper mt-4">
                       <a href="profil.html" class="btn btn-primary">
-                        Profil Selengkapnya
+                        Profil Diklat 
                       </a>
                       <a href="profil.html#tim-diklat" class="btn btn-outline">
                         Tim Diklat
