--- a/frontend/admin/index.html
+++ b/frontend/admin/index.html
@@ -96,6 +96,16 @@
                   >
                 </li>
                 <li>
+                  <a class="dropdown-item" href="kalender.html"
+                    >Kalender Pelatihan</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="kritiksaran.html"
+                    >Kritik dan Saran</a
+                  >
+                </li>
+                <li>
                   <a class="dropdown-item" href="gallery.html">Gallery</a>
                 </li>
               </ul>
@@ -132,13 +142,41 @@
                 href="#"
                 data-bs-toggle="dropdown"
               >
+                Profil
+              </a>
+              <ul class="dropdown-menu dropdown-menu-dark">
+                <li>
+                  <a class="dropdown-item" href="institusipelatihan.html"
+                    >Institusi Pelatihan</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="timkerja.html">Tim Kerja</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="historiakreditasi.html"
+                    >Histori Akreditasi</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="strukturorganisasi.html"
+                    >Struktur Organisasi</a
+                  >
+                </li>
+              </ul>
+            </li>
+
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                data-bs-toggle="dropdown"
+              >
                 Admin
               </a>
               <ul class="dropdown-menu dropdown-menu-dark">
                 <li>
-                  <a class="dropdown-item" href="logadmin.html"
-                    >Log Admin</a
-                  >
+                  <a class="dropdown-item" href="logadmin.html">Log Admin</a>
                 </li>
               </ul>
             </li>
