--- a/frontend/admin/institusi.html
+++ b/frontend/admin/institusi.html
@@ -95,6 +95,16 @@
                   >
                 </li>
                 <li>
+                  <a class="dropdown-item" href="kalender.html"
+                    >Kalender Pelatihan</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="kritiksaran.html"
+                    >Kritik dan Saran</a
+                  >
+                </li>
+                <li>
                   <a class="dropdown-item" href="gallery.html">Gallery</a>
                 </li>
               </ul>
