--- a/frontend/admin/pelatihan.html
+++ b/frontend/admin/pelatihan.html
@@ -87,6 +87,16 @@
                   >
                 </li>
                 <li>
+                  <a class="dropdown-item" href="kalender.html"
+                    >Kalender Pelatihan</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="kritiksaran.html"
+                    >Kritik dan Saran</a
+                  >
+                </li>
+                <li>
                   <a class="dropdown-item" href="gallery.html">Gallery</a>
                 </li>
               </ul>
@@ -143,7 +153,6 @@
         </div>
       </div>
     </nav>
-
     <!-- ===================== END NAVBAR ===================== -->
 
     <div class="container py-4">
