--- a/frontend/kalender.html
+++ b/frontend/kalender.html
@@ -9,8 +9,7 @@
   <meta name="keywords" content="">
 
  <!-- Favicons -->
-    <link rel="icon" href="/pelatihanmargono/backend/uploads/foto/LogoRSMS2.png" type="image/png" sizes="512x512">
-    <link rel="apple-touch-icon" href="/pelatihanmargono/backend/uploads/foto/LogoRSMS.png" sizes="180x180">
+    <link rel="icon" href="/pelatihanmargono/backend/uploads/foto/LogoWeb.png" type="image/png" sizes="512x512">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -53,7 +52,7 @@
           <!-- Uncomment the line below if you also wish to use an image logo -->
           <!-- <img src="assets/img/logo.webp" alt=""> -->
           
-          <img src="/pelatihanmargono/backend/uploads/foto/LogoRSMS.png" 
+          <img src="/pelatihanmargono/backend/uploads/foto/LogoWeb.png" 
               alt="Logo RSMS" 
               style="height: 40px; margin-right: 8px;">
 
@@ -208,7 +207,7 @@
             </li>
             <li class="dropdown">
               <a href="#"
-                ><span>About</span>
+                ><span>Tentang Kami</span>
                 <i class="bi bi-chevron-down toggle-dropdown"></i
               ></a>
               <ul>
