--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -10,15 +10,9 @@
     <!-- Favicons -->
     <link
       rel="icon"
-      href="/pelatihanmargono/backend/uploads/foto/LogoRSMS2.png"
+      href="/pelatihanmargono/backend/uploads/foto/LogoWeb.png"
       type="image/png"
       sizes="512x512"
-    />
-    <link
-      rel="apple-touch-icon"
-      href="/pelatihanmargono/backend/uploads/foto/LogoRSMS.png"
-      sizes="180x180"
-    />
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect" />
@@ -63,7 +57,7 @@
           class="logo d-flex align-items-center me-auto me-xl-0"
         >
           <img
-            src="/pelatihanmargono/backend/uploads/foto/LogoRSMS.png"
+            src="/pelatihanmargono/backend/uploads/foto/LogoWeb.png"
             alt="Logo RSMS"
             style="height: 40px; margin-right: 8px"
           />
@@ -219,7 +213,7 @@
 
             <li class="dropdown">
               <a href="#"
-                ><span>About</span
+                ><span>Tentang Kami</span
                 ><i class="bi bi-chevron-down toggle-dropdown"></i
               ></a>
               <ul>
