--- a/frontend/fasilitator.html
+++ b/frontend/fasilitator.html
@@ -10,14 +10,9 @@
     <!-- Favicons -->
     <link
       rel="icon"
-      href="/pelatihanmargono/backend/uploads/foto/LogoRSMS2.png"
+      href="/pelatihanmargono/backend/uploads/foto/LogoWeb.png"
       type="image/png"
       sizes="512x512"
-    />
-    <link
-      rel="apple-touch-icon"
-      href="/pelatihanmargono/backend/uploads/foto/LogoRSMS.png"
-      sizes="180x180"
     />
 
     <!-- Fonts -->
@@ -73,7 +68,7 @@
           <!-- <img src="assets/img/logo.webp" alt=""> -->
 
           <img
-            src="/pelatihanmargono/backend/uploads/foto/LogoRSMS.png"
+            src="/pelatihanmargono/backend/uploads/foto/LogoWeb.png"
             alt="Logo RSMS"
             style="height: 40px; margin-right: 8px"
           />
@@ -229,7 +224,7 @@
 
             <li class="dropdown">
               <a href="#"
-                ><span>About</span
+                ><span>Tentang Kami</span
                 ><i class="bi bi-chevron-down toggle-dropdown"></i
               ></a>
               <ul>
